--- a/bynx-shop-model-frontend/package.json
+++ b/bynx-shop-model-frontend/package.json
@@ -20,9 +20,10 @@
     "@angular/platform-browser-dynamic": "~13.1.0",
     "@angular/router": "~13.1.0",
     "@ng-bootstrap/ng-bootstrap": "^12.1.2",
-    "@popperjs/core": "^2.10.2",
+    "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
+    "jquery": "^3.6.0",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
